math-core/tests/snapshots/wiki_test__wiki154.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\Rho \\Sigma \\Tau \\Upsilon \\Phi \\Chi \\Psi \\Omega"
---
<math>
    <mpadded><mi mathvariant="normal">Ρ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Σ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Τ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Υ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Φ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Χ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Ψ</mi></mpadded>
    <mpadded><mi mathvariant="normal">Ω</mi></mpadded>
</math>
