math-core/tests/snapshots/wiki_test__wiki156.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\iota \\kappa \\lambda \\mu \\nu \\xi \\omicron \\pi"
---
<math>
    <mi>ι</mi>
    <mi>κ</mi>
    <mi>λ</mi>
    <mi>μ</mi>
    <mi>ν</mi>
    <mi>ξ</mi>
    <mi>ο</mi>
    <mi>π</mi>
</math>
