math-core/tests/snapshots/wiki_test__wiki158.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\varGamma \\varDelta \\varTheta \\varLambda \\varXi \\varPi \\varSigma \\varPhi \\varUpsilon \\varOmega"
---
<math>
    <mi>Γ</mi>
    <mi>Δ</mi>
    <mi>Θ</mi>
    <mi>Λ</mi>
    <mi>Ξ</mi>
    <mi>Π</mi>
    <mi>Σ</mi>
    <mi>Φ</mi>
    <mi>ϒ</mi>
    <mi>Ω</mi>
</math>
