math-core/tests/snapshots/wiki_test__wiki159.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\varepsilon \\digamma \\varkappa \\varpi \\varrho \\varsigma \\vartheta \\varphi"
---
<math>
    <mi>ε</mi>
    <mi>ϝ</mi>
    <mi>ϰ</mi>
    <mi>ϖ</mi>
    <mi>ϱ</mi>
    <mi>ς</mi>
    <mi>ϑ</mi>
    <mi>φ</mi>
</math>
