math-core/tests/snapshots/wiki_test__wiki161.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\mathbb{ABCDEFGHI} \\\\ \\mathbb{JKLMNOPQR} \\\\ \\mathbb{STUVWXYZ}"
---
<math>
    <mi>𝔸𝔹ℂ𝔻𝔼𝔽𝔾ℍ𝕀</mi>
    <mi>𝕁𝕂𝕃𝕄ℕ𝕆ℙℚℝ</mi>
    <mi>𝕊𝕋𝕌𝕍𝕎𝕏𝕐ℤ</mi>
</math>
