math-core/tests/snapshots/wiki_test__wiki164.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\Iota \\Kappa \\Lambda \\Mu \\Nu \\Xi \\Omicron \\Pi}"
---
<math>
    <mi>𝚰𝚱𝚲𝚳𝚴𝚵𝚶𝚷</mi>
</math>
